# Saphir

./: .gitignore  README.md  Saphir.code-workspace
python/gui/: LICENCE.md  pyproject.toml
python/gui/src/Saphir/: .gitignore  AnalysisContoller.py  ApplicationController.py  ClamAntivirusController.py  ComponentsModel.py  Constants.py  DevModeHelper.py  EMAETAEstimator.py  Enums.py  InterfaceInputs.py  InterfaceSocle.py  LogListModel.py  MessagesListModel.py  MousePointer.py  Panoptiscan.qmlproject  Panoptiscan.qmlproject.qtds  PsecInputFilesListModel.py  PsecInputFilesListProxyModel.py  QueueListModel.py  QueueListProxyModel.py  ReportController.py  SystemInformationModel.py  abstract_antivirus_controller.py  main.py  mock_psec_controller.py  mock_psec_sys_usb_inputs.py  mock_psec_sys_usb_messaging.py  requirements.txt  start.sh
python/gui/src/Saphir/AntivirusControllers/: ClamAntivirusController.py
python/gui/src/Saphir/Deprecated/: BusyPanelUi.ui.qml  InterfaceSocle.py
python/gui/src/Saphir/GUI/: ActionsPanel.qml  ActionsPanelUi.ui.qml  App.qml  BoutonAction.ui.qml  CMakeLists.txt  Constants.qml  EcranPrincipal.qml  EcranPrincipalUi.ui.qml  EnTete.qml  EnTeteUi.ui.qml  FondEcranUi.ui.qml  HelpPanelUi.ui.qml  Icone.qml  MainScreen.qml  MessageBox.qml  MockInputFilesListModel.qml  MockOutputFilesListModel.qml  NavigateurFichiersUi.ui.qml  PText.qml  ResultDigitsPanel.qml  ResultDigitsPanelUi.ui.qml  ResultsListPanel.qml  ResultsListPanelUi.ui.qml  Saphir.qmlproject  Saphir.qmlproject.qtds  Saphir.qrc  SplashScreen.qml  StatePanel.qml  StatePanelUi.ui.qml  qds.cmake  qmldir
python/gui/src/Saphir/GUI.v1/: ActionsPanelUi.ui.qml  EcranPrincipal.qml  EcranPrincipalUi.ui.qml  MessageBox.qml  PText.qml  ResultDigitsPanel.qml  qmldir
python/lib/: pyproject.toml
python/libsaphir/: pyproject.toml
python/libsaphir/src/libsaphir/: __init__.py  _abstract_antivirus_controller.py  _clam_antivirus_controller.py  _constants.py  _eea_antivirus_controller.py  _enums.py
(+234 files in other folders)
