[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libsaphir"
version = "0.1"
authors = [ 
    { name="Tristan Israël", email="tristan.israel@alefbet.net" }, 
]
description = "Bibliothèque pour Saphir"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"