[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libsaphir"
version = "1.0"
authors = [ 
    { name="Tristan Israël", email="tristan.israel@alefbet.net" }, 
]
description = "Library for Saphir"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[tool.hatch.build.targets.wheel]
packages = ["src/libsaphir"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"